# FocusBuddy

./: .gitignore  README.md
core_cpp/: CMakeLists.txt
core_cpp/include/: DatabaseManager.h
core_cpp/include/entities/: Achievement.h  Category.h  DailyReflection.h  Difficulty.h  Goal.h  Habit.h  HabitLog.h  ISerializable.h  Priority.h  Session.h  Status.h  Task.h  User.h
core_cpp/include/repositories/: BaseRepository.h  HabitRepository.h  TaskRepository.h  UserRepository.h
core_cpp/src/: DatabaseManager.cpp  main.cpp
core_cpp/src/repositories/: HabitRepository.cpp  TaskRepository.cpp  UserRepository.cpp
telegram_bot/: bot.py
ui_python/: app.py  charts.py  dialogs.py  main_window.py  styles.py
ui_python/modules/: backend_connector.py  google_sync.py  lookups.py
ui_python/widgets/: calendar.py  dashboard.py  gamification.py  goals.py  habits.py  home.py  overview.py  planner.py  pomodoro.py  settings.py
